# cycling_dynamics

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  ruff.toml
cycling-dynamics/: LICENSE.txt  README.md  pyproject.toml
note_books/: Surface.ipynb  examples.ipynb
src/cycling_dynamics/: __about__.py  __init__.py  calc.py  critical_power.py  dynamics.py  load_data.py  models.py  plots.py  segments.py  stats.py  surface.py  temp_segments.py
tests/: __init__.py  test_critical_power.py  test_load_data.py  test_segments.py
tests/test_data/: North_Table_to_Lookout_MTB.fit  alex_24HOP_2024-02-17-185919-ELEMNT ROAM 3FF5-53-0.fit  alex_24HOP_2024-02-18-002255-ELEMNT ROAM 3FF5-54-0.fit  power_profile_2.csv  vincent_lap_1_24HOP_14012433014_ACTIVITY.fit  vincent_mtb_id_surface_14517623900_ACTIVITY.fit
