[project]
name = "cycling-dynamics"
description = 'Cycling (Bicycling) models of motion, air drag, rolling resistance, power calculations.'
readme = "README.md"
version = "2025.4.1"
requires-python = ">=3.13"
license = "MIT"
keywords = ["cycling", "bicycle", "dynamics", "speed", "Rolling Resistance", "Air Resistance", "Calculations", "Marginal Gains"]
authors = [
  { name = "Vincent Davis", email = "v@heteroskedastic.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "garmin-fit-sdk>=21.158.0",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "pydantic>=2.11.3",
]
[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
    "hatch>=1.13.0",
    "mypy>=1.12.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "notebook>=7.2.2",
]
[project.urls]
Documentation = "https://github.com/vincentdavis/cycling-dynamics#readme"
Issues = "https://github.com/vincentdavis/cycling-dynamics/issues"
Source = "https://github.com/vincentdavis/cycling-dynamics"

[tool.coverage.run]
source_pkgs = ["cycling_dynamics", "tests"]
branch = true
parallel = true
omit = [
  "src/cycling_dynamics/__about__.py",
]

[tool.coverage.paths]
cycling_dynamics = ["src/cycling_dynamics", "*/cycling-dynamics/src/cycling_dynamics"]
tests = ["tests", "*/cycling-dynamics/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    ".", "src"
]


